# EgoEngine-MPC

./: .gitignore  pyproject.toml  requirements.txt  run.sh  run_aria.sh  run_aria_rl.sh  run_rl_co_design.sh  run_taco.sh  setup.py  viewer.py
examples/: run_mjwp.py  run_mjwp_rl_rsl.py
spider/: config.py
spider/assets/mano/: contact_scene.xml  empty_scene.xml
spider/preprocess/: decompose.py  detect_contact.py  generate_xml.py  ik.py  replay.py
spider/process_datasets/: aria_retarget_to_spider.py  convert_to_gigahand_layout.py  gigahand.py  taco_retarget_to_spider.py
spider/rl/: __init__.py  mjwp_rsl_env.py
spider/simulators/: mjwp.py
spider/viewers/: __init__.py
wandb/: latest-run
wandb/run-20260223_224022-tduqd5ya/: run-tduqd5ya.wandb
wandb/run-20260223_224335-92g1omw1/: run-92g1omw1.wandb
wandb/run-20260224_131331-xhi27ns5/: run-xhi27ns5.wandb
wandb/run-20260224_131627-sibb12xm/: run-sibb12xm.wandb
wandb/run-20260224_133613-27af3jfp/: run-27af3jfp.wandb
wandb/run-20260224_143034-rpnvx216/: run-rpnvx216.wandb
wandb/run-20260224_143051-9gzh5ygn/: run-9gzh5ygn.wandb
wandb/run-20260224_143847-egz1jfez/: run-egz1jfez.wandb
wandb/run-20260224_144153-8sxbaovz/: run-8sxbaovz.wandb
wandb/run-20260224_150037-9saog1up/: run-9saog1up.wandb
wandb/run-20260224_150544-8vokpx93/: run-8vokpx93.wandb
wandb/run-20260224_150737-fho1xtmq/: run-fho1xtmq.wandb
wandb/run-20260224_151440-ho8jjsxr/: run-ho8jjsxr.wandb
wandb/run-20260224_152617-uts3mek8/: run-uts3mek8.wandb
wandb/run-20260224_153155-sdyzqmh1/: run-sdyzqmh1.wandb
(+45 files in other folders)
