[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "numpy<1.24",
  "torch",
  "loguru",
  "tyro",
  "loop-rate-limiters",
  "hydra-core",
  "matplotlib",
  "imageio[ffmpeg]",
  "mediapy",
  "opencv-python",
  "newton[examples] @ git+https://github.com/newton-physics/newton.git",
  "rerun-sdk",
  "viser",
  "ipdb",
  "pymeshlab",
  "open3d",
  "ipykernel",
  "huggingface_hub",
  "gspread",
  "google-auth",
  "chumpy",
]

[project.scripts]
spider-mjwp = "examples.run_mjwp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["spider"]

[project.optional-dependencies]
dev = [
  "ruff>=0.13.2",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "C4",
  "SIM",
]

ignore = [
  "E501",
  "D100",
  "D104",
  "D107",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["spider"]
